Fix visual some issues on mobile view

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -36,6 +36,13 @@
 
 }
 
-#table-prices{
 
+.brand-logo-img{
+    width: 65px;
+}
+
+@media only screen and (max-width: 640px) {
+    .brand-logo-img{
+        width: 50px;
+    }
 }
